[gd_scene load_steps=4 format=3 uid="uid://d2bydhu6cwalo"]

[ext_resource type="Script" path="res://Weapons/Weapons/Aura/aura_bullet.gd" id="1_flhco"]
[ext_resource type="Texture2D" uid="uid://dl04ctaiyxdpc" path="res://Art/Weapons/aura_bullet.png" id="2_j0htp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gi6ge"]
radius = 177.138

[node name="AuraBullet" type="Area2D" groups=["bullet"]]
modulate = Color(1, 1, 1, 0.729412)
script = ExtResource("1_flhco")

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_gi6ge")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.454902)
position = Vector2(-0.500009, -0.502973)
scale = Vector2(0.1805, 0.1805)
texture = ExtResource("2_j0htp")

[node name="FadeoutTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FadeoutTimer" to="." method="_on_fadeout_timer_timeout"]
